yeti: fix input and button alignment for firefox, closes #330

--- a/yeti/bootstrap.css
+++ b/yeti/bootstrap.css
@@ -891,7 +891,7 @@ html {
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 15px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   color: #222222;
   background-color: #ffffff;
 }
@@ -938,7 +938,7 @@ img {
 }
 .img-thumbnail {
   padding: 4px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   border-radius: 0;
@@ -1243,7 +1243,7 @@ dl {
 }
 dt,
 dd {
-  line-height: 1.42857143;
+  line-height: 1.4;
 }
 dt {
   font-weight: bold;
@@ -1290,7 +1290,7 @@ blockquote small,
 blockquote .small {
   display: block;
   font-size: 80%;
-  line-height: 1.42857143;
+  line-height: 1.4;
   color: #6f6f6f;
 }
 blockquote footer:before,
@@ -1329,7 +1329,7 @@ blockquote:after {
 address {
   margin-bottom: 21px;
   font-style: normal;
-  line-height: 1.42857143;
+  line-height: 1.4;
 }
 code,
 kbd,
@@ -1362,7 +1362,7 @@ pre {
   padding: 10px;
   margin: 0 0 10.5px;
   font-size: 14px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   word-break: break-all;
   word-wrap: break-word;
   color: #333333;
@@ -2067,7 +2067,7 @@ th {
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
   padding: 8px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
@@ -2339,7 +2339,7 @@ output {
   display: block;
   padding-top: 9px;
   font-size: 15px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   color: #6f6f6f;
 }
 .form-control {
@@ -2348,7 +2348,7 @@ output {
   height: 39px;
   padding: 8px 12px;
   font-size: 15px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   color: #6f6f6f;
   background-color: #ffffff;
   background-image: none;
@@ -2394,7 +2394,7 @@ input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
   line-height: 39px;
-  line-height: 1.42857143 \0;
+  line-height: 1.4 \0;
 }
 input[type="date"].input-sm,
 input[type="time"].input-sm,
@@ -2724,7 +2724,7 @@ select[multiple].input-lg {
   white-space: nowrap;
   padding: 8px 12px;
   font-size: 15px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   border-radius: 0;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -3153,7 +3153,7 @@ tbody.collapse.in {
   padding: 3px 20px;
   clear: both;
   font-weight: normal;
-  line-height: 1.42857143;
+  line-height: 1.4;
   color: #555555;
   white-space: nowrap;
 }
@@ -3202,7 +3202,7 @@ tbody.collapse.in {
   display: block;
   padding: 3px 20px;
   font-size: 12px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   color: #999999;
   white-space: nowrap;
 }
@@ -3618,7 +3618,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs > li > a {
   margin-right: 2px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   border: 1px solid transparent;
   border-radius: 0 0 0 0;
 }
@@ -4308,7 +4308,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   position: relative;
   float: left;
   padding: 8px 12px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   text-decoration: none;
   color: #008cba;
   background-color: transparent;
@@ -4573,7 +4573,7 @@ a.list-group-item.active > .badge,
   display: block;
   padding: 4px;
   margin-bottom: 21px;
-  line-height: 1.42857143;
+  line-height: 1.4;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   border-radius: 0;
@@ -5416,14 +5416,14 @@ button.close {
 .modal-header {
   padding: 15px;
   border-bottom: 1px solid #e5e5e5;
-  min-height: 16.42857143px;
+  min-height: 16.4px;
 }
 .modal-header .close {
   margin-top: -2px;
 }
 .modal-title {
   margin: 0;
-  line-height: 1.42857143;
+  line-height: 1.4;
 }
 .modal-body {
   position: relative;
